Update makefile for YAL and add random tree construction

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
 .vs
-.o
-.obj
-.log
+*.o
+*.obj
+*.log
 /bin/main
-interpreter
-/bin/test_tree
+/bin/interpreter
+/bin/test_polish
 /bin/seq_pair
 sa.xcodeproj
+src/yal/parser.cpp 
+src/yal/parser.hpp 
+src/yal/location.hh 
+src/yal/position.hh 
+src/yal/stack.hh 
+src/yal/scanner.cpp
